<resources>
    <string name="app_name">Porto</string>
    <string name="welcome">Welcome to Porto!</string>
    <string name="log">Log in</string>
    <string name="password">Password</string>
    <string name="password_confirm">Confirm password</string>
    <string name="username_email">Email</string>
    <string name="username">Your name</string>
    <string name="email">Email</string>
    <string name="register">Register</string>
    <string name="menu_profile">Profile</string>
    <string name="menu_home">Home</string>
    <string name="menu_chat">Chat</string>
    <string name="title_activity_home">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="post_name" translatable="false">John Doe</string>
    <string name="postFieldHint">Write something here…</string>
    <string name="postButton">Post</string>
    <string name="your_comment">Your comment…</string>
    <string name="comments">Comments</string>
    <string name="send">Send</string>
</resources>