<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout3"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.comment.CommentFragment">

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@+id/constraintLayout2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="0dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/constraintLayout"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="8dp"
                    android:background="@drawable/shadow"
                    android:elevation="4dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <ImageButton
                        android:id="@+id/comment_shareButton"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:layout_marginEnd="8dp"
                        android:background="#00FFFFFF"
                        android:paddingLeft="10dp"
                        android:paddingTop="6dp"
                        android:paddingRight="10dp"
                        android:paddingBottom="6dp"
                        android:src="@drawable/ic_share"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/comment_post_text" />

                    <TextView
                        android:id="@+id/comment_post_username"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:text="\@johndoe"
                        android:textSize="20sp"
                        app:layout_constraintStart_toEndOf="@+id/comment_post_profileImage"
                        app:layout_constraintTop_toTopOf="@+id/comment_post_profileImage" />

                    <TextView
                        android:id="@+id/comment_post_timestamp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:text="TextView"
                        app:layout_constraintBottom_toBottomOf="@+id/comment_post_profileImage"
                        app:layout_constraintStart_toEndOf="@+id/comment_post_profileImage" />

                    <ImageButton
                        android:id="@+id/comment_likeButton"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:layout_marginTop="8dp"
                        android:layout_marginBottom="8dp"
                        android:background="#00FFFFFF"
                        android:elevation="5dp"
                        android:paddingLeft="10dp"
                        android:paddingTop="6dp"
                        android:paddingRight="10dp"
                        android:paddingBottom="6dp"
                        android:src="@drawable/ic_thumbs_up"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/comment_post_text" />

                    <ImageView
                        android:id="@+id/comment_post_profileImage"
                        android:layout_width="48dp"
                        android:layout_height="48dp"
                        android:layout_marginStart="8dp"
                        android:layout_marginTop="8dp"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        tools:src="@drawable/ic_profile" />

                    <ImageButton
                        android:id="@+id/comment_dislikeButton"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:layout_marginTop="8dp"
                        android:background="#00FFFFFF"
                        android:paddingLeft="10dp"
                        android:paddingTop="6dp"
                        android:paddingRight="10dp"
                        android:paddingBottom="6dp"
                        android:src="@drawable/ic_thumbs_down"
                        app:layout_constraintStart_toEndOf="@+id/comment_post_score"
                        app:layout_constraintTop_toBottomOf="@+id/comment_post_text" />

                    <TextView
                        android:id="@+id/comment_post_text"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:layout_marginTop="8dp"
                        android:layout_marginEnd="16dp"
                        android:text="Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla et diam velit. Aliquam aliquam mi eu leo imperdiet, eu accumsan massa volutpat. Pellentesque consequat nisl ac nunc gravida auctor. Phasellus tincidunt sollicitudin neque, vitae cursus leo ultricies vitae. Sed eget nulla sit amet felis volutpat ultrices eu ac magna. Etiam nec ligula condimentum, viverra nunc et, consectetur turpis. Nam sollicitudin diam mollis risus rhoncus, bibendum aliquet lorem volutpat. Fusce eget tellus sed felis elementum ultricies. Donec sed ultricies dolor."
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/comment_post_profileImage" />

                    <TextView
                        android:id="@+id/comment_post_score"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:text="100"
                        app:layout_constraintBottom_toBottomOf="@+id/comment_dislikeButton"
                        app:layout_constraintStart_toEndOf="@+id/comment_likeButton"
                        app:layout_constraintTop_toTopOf="@+id/comment_dislikeButton" />
                </androidx.constraintlayout.widget.ConstraintLayout>

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/commentsRecycler"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/commentsLabel" />

                <TextView
                    android:id="@+id/commentsLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="16dp"
                    android:text="@string/comments"
                    android:textSize="20sp"
                    app:layout_constraintStart_toStartOf="@+id/constraintLayout"
                    app:layout_constraintTop_toBottomOf="@+id/constraintLayout" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </LinearLayout>
    </ScrollView>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:backgroundTint="@color/design_default_color_on_primary">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/writeCommentInput"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:hint="@string/postFieldHint"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/sendComment"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/writeComment"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textFilter|textMultiLine" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/sendComment"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/send"
            app:icon="@drawable/ic_send"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/writeCommentInput"
            app:layout_constraintVertical_bias="0.7" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>